--- a/css/paper.css
+++ b/css/paper.css
@@ -1,5 +1,5 @@
 :root {
-    --base-color: #0c0c0f;
+    --base-color: #038f02;
     --bg-color: #e2e2e2;
     --link-color: #39ff14;
     --color-blue: #3e6ff7;
