--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,9 @@
 body {
-    background-color: #0a0e14;
+    background-image: url('../icons/wallpaper/computer.png');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: #d1d5db;
     font-family: Arial, sans-serif;
     margin: 0;
@@ -7,13 +11,41 @@ body {
 }
 
 header {
-    text-align: center;
+    background-color: #1c1f26;
     padding: 20px 0;
 }
 
-header h1 {
-    font-size: 3rem;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.nav-links, .social-links {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-links li, .social-links li {
+    margin: 0 15px;
+}
+
+.nav-links a, .social-links a {
     color: #39ff14;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.nav-links a:hover, .social-links a:hover {
+    text-decoration: underline;
+}
+
+.social-links a {
+    font-size: 1.5rem;
 }
 
 main {
@@ -24,10 +56,9 @@ main {
 
 .blog-post {
     background-color: #1c1f26;
-    border: 2px solid #07ff00;
     padding: 20px;
-    margin: 20px 0;
-    border-radius: 10px;
+    margin: 30px 0;
+    border-radius: 40px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -51,16 +82,17 @@ main {
     color: #d1d5db;
 }
 
-.blog-post.hovered {
+.blog-post:hover {
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
+
 footer {
-    border: 0px;
+    border: 0;
     background: transparent url("/assets/img/hr-black.png") center center repeat-x;
     height: 3px;
     margin-bottom: 50px;
-    margin: 30px 0px 60px 0px;
+    margin: 30px 0 60px 0;
     outline: none;
     padding-top: 30px;
     text-align: center;
