--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,12 @@ body {
     font-family: "Lucida Consola", monospace;
     margin: 0;
     padding: 0;
-    background-image: url('../photos/japan.jpg');
+    background-color: #000000;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #00ff2f;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +37,7 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    color: rgb(0, 255, 34);
+    color: rgb(255, 255, 255);
     padding: 1rem;
     text-decoration: none;
 }
@@ -62,6 +62,3 @@ section#home img {
     margin-top: 2rem;
     border-radius: 5px;
 }
-
-/* Leia aqui o conteúdo abaixo e você entenderá o porque disso está assim
-/* https://untw0.github.io/javascript-obfuscation
