--- a/styles/papers-html.css
+++ b/styles/papers-html.css
@@ -2,12 +2,12 @@ body {
     font-family: "Lucida Consola", monospace;
     margin: 0;
     padding: 0;
-    background-image: url('../photos/japan.jpg');
+    background-color: #000000;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #00ff1a;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +37,7 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    color: rgb(9, 255, 0);
+    color: rgb(255, 255, 255);
     padding: 1rem;
     text-decoration: none;
 }
@@ -68,7 +68,7 @@ section#papers h2 {
     margin: 1rem 0;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
-    color: #00ff1a;
+    color: #ffffff;
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
@@ -84,12 +84,9 @@ section#papers h2 {
 
 .paper-bubble .reading-time {
     font-style: italic;
-    color: #00ff26;
+    color: #ffffff;
 }
 
 .paper-bubble .summary {
     margin-top: 0.5rem;
 }
-
-/* Leia aqui o conteúdo abaixo e você entenderá o porque disso está assim
-/* https://untw0.github.io/javascript-obfuscation
