--- a/styles/papers-html.css
+++ b/styles/papers-html.css
@@ -2,7 +2,7 @@ body {
     font-family: "Lucida Consola", monospace;
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #0c0d10;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,7 +16,7 @@ body {
 
 nav {
     width: 100%;
-    background-color: #000000;
+    background-color: #0c0d10;
     position: fixed;
     top: 0;
     left: 0;
@@ -49,9 +49,8 @@ nav ul li a:hover {
 section#papers {
     max-width: 800px;
     padding: 2rem;
-    background-color: #000000;
+    background-color: #0c0d10;
     border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin-top: 5rem;
 }
@@ -66,7 +65,6 @@ section#papers h2 {
     border-radius: 10px;
     padding: 1rem;
     margin: 1rem 0;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
     color: #ffffff;
     text-decoration: none;
