--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Lucida Consola", monospace;
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #0c0d10;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,6 +25,7 @@ nav {
 
 nav ul {
     list-style-type: none;
+    background-color: #0c0d10;
     padding: 0;
     margin: 0;
     display: flex;
